# feedback-app

./: .gitignore  main.py  pyproject.toml
api/: routes.py  schemas.py
domain/: models.py
repository/: database.py  inbox.py
service/: feedback_service.py
tests/: test_api.py  test_domain.py  test_repository.py  test_service.py
